# beauty-salon

./: ..csproj  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  BeautySalon.csproj  Diagrama de Procesos.drawio  Dockerfile  Program.cs  README.md  SI514.csproj  SI514.sln  middleware.ts  next.config.ts  package-lock.json  package.json  pyproject.toml  render.yaml  tsconfig.json  vercel.json
.github/ISSUE_TEMPLATE/: config.yml  larman-use-case.yml  use-case.md  use-case.yml
.github/workflows/: ci.yml  docker.yml  dotnet.yml  next.yml  plantuml.yml
.prompt/: platform.md
Components/: App.razor  Routes.razor  _Imports.razor
Components/Account/: IdentityComponentsEndpointRouteBuilderExtensions.cs  IdentityNoOpEmailSender.cs  IdentityRedirectManager.cs  IdentityRevalidatingAuthenticationStateProvider.cs  IdentityUserAccessor.cs
Components/Layout/: NavMenu.razor
Data/: ApplicationDbContext.cs  ApplicationUser.cs
Properties/: launchSettings.json
accounts/: admin.py  forms.py  models.py  urls.py  views.py
app/: page.tsx
appointments/: forms.py  models.py  urls.py  views.py
beauty-salon/: .gitignore  next.config.js  next.config.ts  package-lock.json  package.json
beauty-salon-Olver/: index.html  package-lock.json  package.json
beauty_salon/: settings.py  urls.py  wsgi.py
core/: admin.py  forms.py  models.py
docs/: README.md  main.typ
prisma/: schema.prisma
salons/: admin.py  forms.py  models.py  urls.py  views.py
scripts/: build.sh
services/: admin.py  forms.py  models.py  urls.py  views.py
sql/: ddl.sql
(+234 files in other folders)
